
- engine
  - Fixed bug in QueuePool, SingletonThreadPool whereby
    connections that were discarded via overflow or periodic
    cleanup() were not explicitly closed, leaving garbage 
    collection to the task instead.   This generally only
    affects non-reference-counting backends like Jython
    and Pypy.  Thanks to Jaimy Azle for spotting
    this.  [ticket:2102]

- postgresql
  - When explicit sequence execution derives the name 
    of the auto-generated sequence of a SERIAL column, 
    which currently only occurs if implicit_returning=False, 
    now accommodates if the table + column name is greater 
    than 63 characters using the same logic Postgresql uses.  
    [ticket:1083]

  - Added an additional libpq message to the list of "disconnect"
    exceptions, "could not receive data from server"
    [ticket:2044]

  - Added RESERVED_WORDS for postgresql dialect. [ticket:2092]

  - Fixed the BIT type to allow a "length" parameter, "varying"
    parameter.  Reflection also fixed.  [ticket:2073]

- informix

  - Added RESERVED_WORDS informix dialect. [ticket:2092]

- mssql
  - Rewrote the query used to get the definition of a view,
    typically when using the Inspector interface, to
    use sys.sql_modules instead of the information schema,
    thereby allowing views definitions longer than 4000 
    characters to be fully returned.  [ticket:2071]

- mysql
  - oursql dialect accepts the same "ssl" arguments in 
    create_engine() as that of MySQLdb.  [ticket:2047]

- firebird
  - The "implicit_returning" flag on create_engine() is
    honored if set to False.  [ticket:2083]

- oracle
  - Using column names that would require quotes
    for the column itself or for a name-generated
    bind parameter, such as names with special
    characters, underscores, non-ascii characters,
    now properly translate bind parameter keys when
    talking to cx_oracle.  [ticket:2100]

  - Oracle dialect adds use_binds_for_limits=False